# snowfl

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml  dependabot-auto-merge.yml  plugin-release.yml
engine/: snowfl.py
plugin/: shell.py
src/snowfl/: core.py  snowfl.py
src/snowfl/lib/: errors.py  get_api_key.py
tests/: conftest.py  test_live.py  test_plugin.py  test_snowfl.py
tools/: build_plugin.py
