[project]
name = "snowfl"
version = "0.4.0"
description = "An unofficial Python wrapper for the Snowfl API, enabling programmatic torrent searches."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi>=2025.11.12",
    "charset-normalizer>=3.4.4",
    "idna>=3.11",
    "requests>=2.32.5",
    "urllib3>=2.6.0",
]

[project.optional-dependencies]
dev = ["build==1.3.0", "coverage==7.12.0", "pytest==9.0.1", "twine==6.2.0"]
