[project]
name = "snowfl"
version = "0.4.0"
description = "An unofficial Python wrapper for the Snowfl API, enabling programmatic torrent searches."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi>=2025.11.12",
    "charset-normalizer>=3.4.4",
    "idna>=3.18",
    "requests>=2.34.2",
    "urllib3>=2.7.0",
]

[project.optional-dependencies]
dev = ["build==1.5.0", "coverage==7.14.2", "pytest==9.1.1", "pytest-rerunfailures==15.1", "twine==6.2.0"]

[tool.pytest.ini_options]
markers = [
    "live: hits snowfl.com — skipped by default, run with -m live",
]
addopts = "-m 'not live'"
